--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,18 @@ a {
     color: var(--accent-color);
 }
 
-.nav-link:hover,
+.header-link:hover{
+        color: var(--accent-color);
+    }
+
+.header-link:focus {
+    color: var(--accent-color);
+}
+
+.nav-link:hover {
+    color: var(--accent-color);
+}
+
 .nav-link:focus {
     color: var(--accent-color);
 }
@@ -69,9 +80,9 @@ a {
     
     color:var(--second-h-color);
 } */
-.header-contacts a {
+/* .header-contacts a {
     color: #757575;
-}
+} */
 
 /* .header-link.contact {
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
