--- a/css/styles.css
+++ b/css/styles.css
@@ -86,9 +86,11 @@ body{
     color: var(--main-white-color);
 }
 .hero-btn{
+    font-family: inherit;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.88;
+    cursor: pointer;
     display: flex;
     align-items: center;
     text-align: center;
@@ -97,7 +99,7 @@ body{
     background-color: var(--accent-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
-    cursor: pointer;
+    
 }
 .hero-btn:hover {
     background-color: var(--btn-other-color);
@@ -172,10 +174,12 @@ body{
 .footer-link{
     color: rgba(255, 255, 255, 0.6);
 }
-.logo-light, .footer-link-location {
+.logo-light {
     color: var(--main-white-color);
 }
-
+.footer-link-location{
+    color: var(--main-white-color);
+}
 .footer-link:hover,
 .footer-link:focus{
     color: var(--accent-color);
@@ -185,6 +189,7 @@ body{
 /* ============================= PORTFOLIO html ====================== */
 /* ====  filter ==== */
 .filter-btn {
+    font-family: inherit;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.63;
@@ -192,12 +197,12 @@ body{
     letter-spacing: 0.03em;
     color: var(--main-h-color);
     border: none;
-    background: var(--main-bg-lite-color);
+    background: var(--main-white-color);
     border-radius: 4px;
     cursor: pointer;
 }
 .filter-btn:hover{
-    color: var(--accent-color);
+    color: #2196F3;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     border-radius: 4px;
     color: var(--main-white-color);
