--- a/css/styles.css
+++ b/css/styles.css
@@ -197,12 +197,12 @@ body{
     letter-spacing: 0.03em;
     color: var(--main-h-color);
     border: none;
-    background: var(--main-white-color);
+    background: var(--main-bg-lite-color);
     border-radius: 4px;
     cursor: pointer;
 }
 .filter-btn:hover{
-    color: #2196F3;
+    background-color: var(--accent-color);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     border-radius: 4px;
     color: var(--main-white-color);
