--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,8 @@ section background dark: #2F303A;
 }
 body{
     font-family:var(--primary-font-family);
+    background-color: var(--main-white-color);
+    color: var(--main-p-color);
 }
 
 /* ========================== HEADER================================ */
@@ -133,9 +135,9 @@ body{
     line-height: 1.71;
     letter-spacing: var(--primary-letter-spacing);
 }
-.feature-text{
+/* .feature-text{
     color: var(--main-p-color);
-}
+} */
 /* =========================== /FEATURES ============================== */
 
 /* ======================== WORK ======================================== */
@@ -168,7 +170,7 @@ body{
     line-height: 1.19;
     text-align: center;
     letter-spacing: var(--primary-letter-spacing);
-    color: var(--main-p-color);
+    /* color: var(--main-p-color); */
 }
 
 /* ======================== /TEAM ========================================== */
